--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <script>
     // Загружаем анимацию
     const rive = new rive.Rive({
-      src: 'https://raw.githubusercontent.com/p3954569-lang/my-portfolio/main/assets/cat_on_the_pillow_04.08.2025.riv',
+      src: '/assets/cat_on_the_pillow_04.08.2025.riv',
       canvas: document.getElementById('rive-container'),
       autoplay: true,
     });
