--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Моё портфолио</title>
   <meta charset="UTF-8">
-  <script src="https://unpkg.com/@rive-app/web@1.0.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@rive-app/web@1.0.0"></script>
   <style>
     body {
       margin: 0;
@@ -52,7 +52,7 @@
 
   <script>
     // Загружаем анимацию
-    const rive = new rive.Rive({
+    new rive.Rive({
       src: '/assets/cat_on_the_pillow_04.08.2025.riv',
       canvas: document.getElementById('rive-container'),
       autoplay: true,
